--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<div id="root"></div>
+<head>
+    <!-- Your head content goes here -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Page Title</title>
+    <!-- Other head elements, stylesheets, scripts, etc. -->
+</head>
+<body>
+    <!-- Your body content goes here -->
+    <div id="root"></div>
+    <!-- Other HTML elements, content, etc. -->
+</body>
+</html>
