--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-<div id="root"></div>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <!-- ... other head elements ... -->
+</head>
+<body>
+  <div id="root"></div>
+</body>
+</html>
