--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <!-- ... other head elements ... -->
+  <meta charset="UTF-8">
+
 </head>
 <body>
   <div id="root"></div>
